sub toolbar added + panel added + panel shown on each sensor

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,3 @@
-
-
 .textured-heatmap-playbutton {
     background-image: url($assetUrlPrefix + "/images/play_button.svg");
     background-size: contain;
@@ -7,6 +5,14 @@
 
 .textured-heatmap-showhide-button {
     background-image: url($assetUrlPrefix + "/images/visibility.svg");
+    background-size: contain;
+    background-size: 80%;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.newToolbarButton {
+    background-image: url($assetUrlPrefix + "/images/user.png");
     background-size: contain;
     background-size: 80%;
     background-repeat: no-repeat;
